--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Video to Audio Converter</title>
-    <link rel="stylesheet" type="text/css" href="static/css/index.css">
-    <link rel="icon" type="image/x-icon" href="static/css/bg3.ico">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" type="image/x-icon" href="images/bg3.ico">
 </head>
 <body>
     <h1>Extract Audio from Video</h1>
