--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Video to Audio Converter</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link rel="icon" type="image/x-icon" href="images/bg3.ico">
+    <link rel="icon" type="image/x-icon" style="border-radius:5px;" href="images/bg3.ico">
 </head>
 <body>
     <h1>Extract Audio from Video</h1>
